// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox component > matches snapshot when checked 1`] = `
<DocumentFragment>
  <label
    class="group flex items-center gap-2 text-sm text-(--color-text-primary) cursor-pointer disabled:opacity-50 disabled:cursor-default"
    data-rac=""
    data-react-aria-pressable="true"
    data-selected="true"
  >
    <span
      style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
    >
      <input
        checked=""
        data-react-aria-pressable="true"
        tabindex="0"
        title=""
        type="checkbox"
      />
    </span>
    <div
      class="flex items-center justify-center w-6 h-6 shrink-0 rounded-sm border transition-colors group-focus-visible:ring-2 group-focus-visible:ring-(--color-border-focus) group-focus-visible:ring-offset-2 bg-(--color-action-primary) border-(--color-action-primary)"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-check w-4 h-4 text-(--color-text-inverse)"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="3"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 6 9 17l-5-5"
        />
      </svg>
    </div>
  </label>
</DocumentFragment>
`;

exports[`Checkbox component > matches snapshot when not checked 1`] = `
<DocumentFragment>
  <label
    class="group flex items-center gap-2 text-sm text-(--color-text-primary) cursor-pointer disabled:opacity-50 disabled:cursor-default"
    data-rac=""
    data-react-aria-pressable="true"
  >
    <span
      style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
    >
      <input
        data-react-aria-pressable="true"
        tabindex="0"
        title=""
        type="checkbox"
      />
    </span>
    <div
      class="flex items-center justify-center w-6 h-6 shrink-0 rounded-sm border transition-colors group-focus-visible:ring-2 group-focus-visible:ring-(--color-border-focus) group-focus-visible:ring-offset-2 bg-(--color-surface-default) border-(--color-border-default) group-hover:border-(--color-border-strong)"
    />
  </label>
</DocumentFragment>
`;

exports[`Checkbox component > renders as checked when isSelected prop is true 1`] = `
<DocumentFragment>
  <label
    class="group flex items-center gap-2 text-sm text-(--color-text-primary) cursor-pointer disabled:opacity-50 disabled:cursor-default"
    data-rac=""
    data-react-aria-pressable="true"
    data-selected="true"
  >
    <span
      style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
    >
      <input
        checked=""
        data-react-aria-pressable="true"
        tabindex="0"
        title=""
        type="checkbox"
      />
    </span>
    <div
      class="flex items-center justify-center w-6 h-6 shrink-0 rounded-sm border transition-colors group-focus-visible:ring-2 group-focus-visible:ring-(--color-border-focus) group-focus-visible:ring-offset-2 bg-(--color-action-primary) border-(--color-action-primary)"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-check w-4 h-4 text-(--color-text-inverse)"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="3"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 6 9 17l-5-5"
        />
      </svg>
    </div>
  </label>
</DocumentFragment>
`;

exports[`Checkbox component > renders correctly 1`] = `
<DocumentFragment>
  <label
    class="group flex items-center gap-2 text-sm text-(--color-text-primary) cursor-pointer disabled:opacity-50 disabled:cursor-default"
    data-rac=""
    data-react-aria-pressable="true"
  >
    <span
      style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
    >
      <input
        data-react-aria-pressable="true"
        tabindex="0"
        title=""
        type="checkbox"
      />
    </span>
    <div
      class="flex items-center justify-center w-6 h-6 shrink-0 rounded-sm border transition-colors group-focus-visible:ring-2 group-focus-visible:ring-(--color-border-focus) group-focus-visible:ring-offset-2 bg-(--color-surface-default) border-(--color-border-default) group-hover:border-(--color-border-strong)"
    />
  </label>
</DocumentFragment>
`;
